packages/isar_generator/test/errors/class/mixin.dart
// only classes

import 'package:isar/isar.dart';

@collection
mixin Test {}
